# TokenSHAP

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/agentshap/results/: exp1_summary_metrics.csv  exp4_injection_summary.csv  exp5_cross_domain_raw.csv  exp5_cross_domain_summary.csv  exp6_model_comparison.csv
experiments/results/: exp1_raw_shap_values.csv  exp2_faithfulness_results.csv  exp4_injection_raw.csv
notebooks/: AgentSHAP Examples.ipynb  VideoSHAP Examples.ipynb
papers/: Untitled.ipynb
papers/videoshap/: Makefile  README.md  cvpr.sty  references.bib  videoshap.tex
papers/videoshap/figures/: FIGURES_TODO.md  ablation_budget.tex  context_dependent.tex  generate_placeholders.tex  pipeline.tex  qual_driving.tex  qual_sports.tex  teaser.tex
tests/: extract_frames_for_review.py  test_video_shap.py  test_visual_masking.py
token_shap/: __init__.py  base.py  token_shap.py  video_shap.py  video_utils.py  visualization.py
