[project]
name = "TokenSHAP"
version = "0.2.2"
description = 'Paper Implementation: "TokenSHAP: Interpreting Large Language Models with Monte Carlo Shapley Value Estimation"'
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Roni Goldshmidt", email = "roni.goldshmidt@getnexar.com" }
]
keywords = ["shapley", "values", "interpretation", "NLP", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.19",
    "pandas>=1.1",
    "matplotlib>=3.3",
    "scikit-learn>=0.23",
    "transformers>=4.56.2",
    "tqdm>=4.50",
    "PyYAML>=5.3",
    "requests>=2.24",
    "sentence-transformers>=3.4.0",
    "openai>=2.15.0",
    "opencv-python>=4.11.0.86",
    "torchvision>=0.23.0",
    "imageio[ffmpeg]>=2.37.2",
    "google-generativeai>=0.8.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/ronigold/TokenSHAP"
Repository = "https://github.com/ronigold/TokenSHAP"
"Bug Reports" = "https://github.com/ronigold/TokenSHAP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["token_shap"]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
